<resources>
    <string name="app_name">NavigationArgs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stocks">ADD STOCKS</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="company_name">Company Name</string>
    <string name="search_by_company_name">Search by or Enter Company Name</string>
    <string name="investment_date">Investment Date</string>
    <string name="investment_price">Investment Price</string>
    <string name="quantity">Quantity</string>
    <string name="gross_amount">Gross Amount</string>
    <string name="charges_optional">Charges (Optional)</string>
    <string name="net_amount">Net Amount</string>
</resources>